test/Fail/Issue1209-5.err
Issue1209-5.agda:11.1-13.26: error: [TerminationIssue]
Termination checking failed for the following functions:
(Option --guardedness might fix this problem.)
  repeat
Problematic calls:
  repeat x
    (at Issue1209-5.agda:13.18-24)
